Add scrollbar fix. (Closes #22).

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         }
       })();
     </script>
+    <style>
+      html {
+        scrollbar-gutter: stable;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
