--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/renderer/_default.page.client.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
